--- a/02.class id selectors/style.css
+++ b/02.class id selectors/style.css
@@ -1,17 +1,27 @@
-p 
-{
+.class3 {
     background-color: #ee82ee;
-    font: verdana;
 }
 
-.class1 
-{
-    font-style: DejaVu Sans;
+.class3.number1 {
+    font-family: Verdana;
 }
 
-div 
-{
+.class3.number3 {
+    font-family: DejaVu Sans;
+    font-size: 24px;
+}
+
+.class3.number5 {
+    font-family: sans-serif;
+}
+
+#number2 {
     color: blue;
     font-size: 36px;
 }
 
+#number4 {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
