--- a/03.grouping selectors/style.css
+++ b/03.grouping selectors/style.css
@@ -2,3 +2,13 @@ button {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
 }
+
+#clickMe {
+    background-color: black;
+    color: white;
+}
+
+#noClickMe {
+    background-color: yellow;
+    color: black;
+}
